@@ -468,6 +468,9 @@ Trunk (unreleased changes)
     than the max of the current length and the proposed length to improve
     performance reading large values. (thushara wijeratna via cdouglas)
 
+    HADOOP-2366. Support trimmed strings in Configuration.  (Michele Catasta
+    via szetszwo)
+
   OPTIMIZATIONS
 
     HADOOP-5595. NameNode does not need to run a replicator to choose a
